// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapToPartnerDocumentSummaryDtoArray should map all partner linked documents into a single list if is MO 1`] = `
Array [
  Object {
    "dateCreated": 2023-05-17T14:11:39.000Z,
    "description": null,
    "fileName": "bocchi-rock.png",
    "fileSize": 30118,
    "id": "069260000024UOxAAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KthEAE/068260000028zfSAAQ/content",
    "linkedEntityId": "a0D2600000z6KthEAE",
    "partnerId": "0012600001amb0ZAAQ",
    "partnerName": "A B Cad Services",
    "uploadedBy": "ken Charles of A B Cad Services",
  },
  Object {
    "dateCreated": 2023-05-17T14:06:49.000Z,
    "description": null,
    "fileName": "bocchi-rock.png",
    "fileSize": 30118,
    "id": "069260000024UOOAA2",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KthEAE/068260000028zeeAAA/content",
    "linkedEntityId": "a0D2600000z6KthEAE",
    "partnerId": "0012600001amb0ZAAQ",
    "partnerName": "A B Cad Services",
    "uploadedBy": "ken Charles of A B Cad Services",
  },
  Object {
    "dateCreated": 2023-05-17T14:05:39.000Z,
    "description": null,
    "fileName": "312922834238211.png",
    "fileSize": 51034,
    "id": "069260000024UOEAA2",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KthEAE/068260000028zePAAQ/content",
    "linkedEntityId": "a0D2600000z6KthEAE",
    "partnerId": "0012600001amb0ZAAQ",
    "partnerName": "A B Cad Services",
    "uploadedBy": "ken Charles of A B Cad Services",
  },
  Object {
    "dateCreated": 2023-02-22T16:48:33.000Z,
    "description": null,
    "fileName": "eui_small_ent_health_level_file.png",
    "fileSize": 35444,
    "id": "06926000001iE1AAAU",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KthEAE/06826000001iXM2AAM/content",
    "linkedEntityId": "a0D2600000z6KthEAE",
    "partnerId": "0012600001amb0ZAAQ",
    "partnerName": "A B Cad Services",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-05-22T12:52:06.000Z,
    "description": null,
    "fileName": "Untitled 2.rtf",
    "fileSize": 1374,
    "id": "069260000024ZZ7AAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294s5AAA/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
  Object {
    "dateCreated": 2023-05-22T12:52:06.000Z,
    "description": null,
    "fileName": "Untitled 9.rtf",
    "fileSize": 13268,
    "id": "069260000024ZZ2AAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294s0AAA/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
  Object {
    "dateCreated": 2023-05-22T12:51:10.000Z,
    "description": 150,
    "fileName": "Untitled 2.rtf",
    "fileSize": 1374,
    "id": "069260000024ZYxAAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294rvAAA/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
  Object {
    "dateCreated": 2023-05-22T11:02:23.000Z,
    "description": 130,
    "fileName": "t03.docx",
    "fileSize": 13396,
    "id": "069260000024ZGFAA2",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294YPAAY/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
  Object {
    "dateCreated": 2023-05-22T10:58:21.000Z,
    "description": 140,
    "fileName": "t02.docx",
    "fileSize": 13396,
    "id": "069260000024ZFlAAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294XvAAI/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
  Object {
    "dateCreated": 2023-02-24T15:43:29.000Z,
    "description": 140,
    "fileName": "Order Form.docx",
    "fileSize": 43977,
    "id": "06926000001iKRJAA2",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtfEAE/06826000001idqhAAA/content",
    "linkedEntityId": "a0D2600000z6KtfEAE",
    "partnerId": "0012600001amaskAAA",
    "partnerName": "EUI Small Ent Health",
    "uploadedBy": "James Black of EUI Small Ent Health",
  },
  Object {
    "dateCreated": 2022-12-06T16:30:21.000Z,
    "description": 140,
    "fileName": "dangerous.jpg",
    "fileSize": 13029,
    "id": "06926000001Y1tUAAS",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtfEAE/06826000001YIbBAAW/content",
    "linkedEntityId": "a0D2600000z6KtfEAE",
    "partnerId": "0012600001amaskAAA",
    "partnerName": "EUI Small Ent Health",
    "uploadedBy": "James Black of EUI Small Ent Health",
  },
]
`;

exports[`mapToPartnerDocumentSummaryDtoArray should show only own documents if not MO 1`] = `
Array [
  Object {
    "dateCreated": 2023-05-22T12:52:06.000Z,
    "description": null,
    "fileName": "Untitled 2.rtf",
    "fileSize": 1374,
    "id": "069260000024ZZ7AAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294s5AAA/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
  Object {
    "dateCreated": 2023-05-22T12:52:06.000Z,
    "description": null,
    "fileName": "Untitled 9.rtf",
    "fileSize": 13268,
    "id": "069260000024ZZ2AAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294s0AAA/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
  Object {
    "dateCreated": 2023-05-22T12:51:10.000Z,
    "description": 150,
    "fileName": "Untitled 2.rtf",
    "fileSize": 1374,
    "id": "069260000024ZYxAAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294rvAAA/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
  Object {
    "dateCreated": 2023-05-22T11:02:23.000Z,
    "description": 130,
    "fileName": "t03.docx",
    "fileSize": 13396,
    "id": "069260000024ZGFAA2",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294YPAAY/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
  Object {
    "dateCreated": 2023-05-22T10:58:21.000Z,
    "description": 140,
    "fileName": "t02.docx",
    "fileSize": 13396,
    "id": "069260000024ZFlAAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/a0D2600000z6KtgEAE/0682600000294XvAAI/content",
    "linkedEntityId": "a0D2600000z6KtgEAE",
    "partnerId": "0012600001amb0RAAQ",
    "partnerName": "ABS EUI Medium Enterprise",
    "uploadedBy": "Sarah Shuang of ABS EUI Medium Enterprise",
  },
]
`;

exports[`mapToProjectDocumentSummaryDtoArray should map content document links to the summary 1`] = `
Array [
  Object {
    "dateCreated": 2022-10-03T12:54:29.000Z,
    "description": null,
    "fileName": "a_b_cad_services_level_file.png",
    "fileSize": 33313,
    "id": "06926000001UyMLAA0",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001VEILAA4/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2022-12-06T15:46:45.000Z,
    "description": null,
    "fileName": "dangerous.jpg",
    "fileSize": 13029,
    "id": "06926000001Y1jjAAC",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001YIRJAA4/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2022-12-06T16:30:55.000Z,
    "description": 130,
    "fileName": "eui_small_ent_health_level_file.png",
    "fileSize": 35444,
    "id": "06926000001Y1tZAAS",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001YIbGAAW/content",
    "uploadedBy": "Javier Baez",
  },
  Object {
    "dateCreated": 2023-02-22T16:41:56.000Z,
    "description": null,
    "fileName": "zoom-background-bathroom-stall.jpg",
    "fileSize": 254352,
    "id": "06926000001iE0MAAU",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iXLEAA2/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-22T16:42:48.000Z,
    "description": null,
    "fileName": "zoom-background-bathroom-stall.jpg",
    "fileSize": 254352,
    "id": "06926000001iE0WAAU",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iXLOAA2/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-22T16:43:15.000Z,
    "description": null,
    "fileName": "zoom-background-bathroom-stall.jpg",
    "fileSize": 254352,
    "id": "06926000001iE0bAAE",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iXLTAA2/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-22T16:44:29.000Z,
    "description": null,
    "fileName": "zoom-background-bathroom-stall.jpg",
    "fileSize": 254352,
    "id": "06926000001iE0lAAE",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iXLdAAM/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-22T16:45:25.000Z,
    "description": null,
    "fileName": "zoom-background-bathroom-stall.jpg",
    "fileSize": 254352,
    "id": "06926000001iE0vAAE",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iXLnAAM/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-22T16:55:57.000Z,
    "description": null,
    "fileName": "Screenshot (1).png",
    "fileSize": 742452,
    "id": "06926000001iE1jAAE",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iXMgAAM/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-22T16:56:15.000Z,
    "description": null,
    "fileName": "Screenshot (3).png",
    "fileSize": 1157772,
    "id": "06926000001iE1oAAE",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iXMlAAM/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-27T16:52:01.000Z,
    "description": 170,
    "fileName": "jpeg",
    "fileSize": 13029,
    "id": "06926000001iP8qAAE",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iiYmAAI/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-27T16:57:20.000Z,
    "description": 170,
    "fileName": "jpeg",
    "fileSize": 130687,
    "id": "06926000001iP9UAAU",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iiZQAAY/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-27T17:11:11.000Z,
    "description": 170,
    "fileName": "eui_small_ent_health_level_file.png",
    "fileSize": 35444,
    "id": "06926000001iPAXAA2",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iiaTAAQ/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-28T11:36:23.000Z,
    "description": 110,
    "fileName": "eui_small_ent_health_level_file.png",
    "fileSize": 35444,
    "id": "06926000001iQ4uAAE",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001ijU8AAI/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-28T15:51:43.000Z,
    "description": 100,
    "fileName": "ktp.png",
    "fileSize": 30716,
    "id": "06926000001iQUxAAM",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001ijuVAAQ/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-02-28T16:28:38.000Z,
    "description": 100,
    "fileName": "ktp.png",
    "fileSize": 30716,
    "id": "06926000001iQYLAA2",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001ijxtAAA/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-09T14:27:19.000Z,
    "description": 20,
    "fileName": "xku4ajf.png",
    "fileSize": 166764,
    "id": "06926000001icV4AAI",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001ivvtAAA/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-09T14:36:46.000Z,
    "description": 100,
    "fileName": "xku4ajf.png",
    "fileSize": 166764,
    "id": "06926000001icVTAAY",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001ivwSAAQ/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-09T15:08:25.000Z,
    "description": 100,
    "fileName": "xku4ajf.png",
    "fileSize": 166764,
    "id": "06926000001icaYAAQ",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iw1XAAQ/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-09T15:15:24.000Z,
    "description": 100,
    "fileName": "Screenshot 2023-03-08 at 17-03-28 Add types - Innovation Funding Service.png",
    "fileSize": 332752,
    "id": "06926000001icbCAAQ",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iw2BAAQ/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-09T15:16:22.000Z,
    "description": 100,
    "fileName": "image-20230309-101800.png",
    "fileSize": 317417,
    "id": "06926000001icbHAAQ",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iw2GAAQ/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-13T15:01:45.000Z,
    "description": 100,
    "fileName": "satania-thumbsup.png",
    "fileSize": 308402,
    "id": "06926000001ifFYAAY",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iymsAAA/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-13T15:04:23.000Z,
    "description": 220,
    "fileName": "satania-thumbsup.png",
    "fileSize": 308402,
    "id": "06926000001ifFdAAI",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001iymxAAA/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-14T14:52:55.000Z,
    "description": 100,
    "fileName": "pcrs.png",
    "fileSize": 217537,
    "id": "06926000001igHzAAI",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001izq0AAA/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-14T15:09:48.000Z,
    "description": 140,
    "fileName": "pcrs.png",
    "fileSize": 217537,
    "id": "06926000001igJlAAI",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001izrhAAA/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-14T15:10:38.000Z,
    "description": 140,
    "fileName": "pcrs.png",
    "fileSize": 217537,
    "id": "06926000001igJvAAI",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001izrrAAA/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-14T15:10:43.000Z,
    "description": 140,
    "fileName": "pcrs.png",
    "fileSize": 217537,
    "id": "06926000001igK0AAI",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001izrwAAA/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-03-14T15:12:03.000Z,
    "description": 240,
    "fileName": "pcrs.png",
    "fileSize": 217537,
    "id": "06926000001igK5AAI",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000001izs1AAA/content",
    "uploadedBy": "Innovate UK",
  },
  Object {
    "dateCreated": 2023-05-19T13:05:27.000Z,
    "description": null,
    "fileName": "BackgroundEraser_20230413_163108635 (1).png",
    "fileSize": 311565,
    "id": "069260000024WnpAAE",
    "isOwner": false,
    "link": "/api/documents/partners/a0E2600000kSp3gEAC/06826000002925LAAQ/content",
    "uploadedBy": "Innovate UK",
  },
]
`;
